kubernetes/ecadraft1.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecadraft
  labels:
    app: ecadraft
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: ecadraft
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ecadraft-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ecadraft
        version: v1
    spec:
      containers:
      - name: ecadraft
        image: iad.ocir.io/showitbuildit1/eca-$COMPARTMENT:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: regcred
