kubernetes/ecadraft-virtual-service-50-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecadraft
spec:
  hosts:
  - "ecadraft.example.com"
  gateways:
  - ecadraft-gateway
  http:
  - route:
    - destination:
        host: ecadraft
        subset: v1
      weight: 50
    - destination:
        host: ecadraft
        subset: v2
      weight: 50
