kubernetes/ecadraft-virtual-service-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecadraft
spec:
  hosts:
  - "ecadraft.example.com" 
  gateways:
  - ecadraft-gateway
  http:
  - route:
    - destination:
        host: ecadraft
        subset: v1
